public/assets/style.css
.col-md-3.col-sm-6{
    padding:10px;
}
.jumbotron{
    margin-top: 1rem;
    margin-bottom: 0.4rem;
}
#signup-form{
    margin-top: 4rem;
}
#post-form{
    margin-top: 1rem;
}
.signin-form{
    margin-top: 6rem;
}
h4,h5{
    font-size: 1.3rem;
}
.card-img-top{
    max-height: 150px;
    object-fit: cover;
}
.card-title {
    margin-bottom: 1rem;
}
.alert-homepage{
    margin-top: 16px;
}
#post-form {
    margin-bottom: 1rem;
}
.det-cont{
    margin-top: 1rem;
}
.disc-bod{
    margin: 15px 0px;
}

